--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,6 @@
     --base-color: #a51dc7;
     --hover-color: #ad37ca;
     --click-color: #b245ce;
-
-    --font-size: 1.25rem;
-
-    --border-radius: 15px;
 }
 
 *
@@ -93,9 +89,9 @@ video
 {
     font-family: inherit;
     font-size: inherit;
-    font-size: var(--font-size);
+    font-size: 1.25rem;
     border: 3px solid var(--base-color);
-    border-radius: var(--border-radius);
+    border-radius: 15px;
     background-color: #fff;
     outline: none;
     text-align: center;
@@ -114,12 +110,12 @@ video
 .container .team .card .button
 {
     text-decoration: none;
-    font-size: var(--font-size);
+    font-size: 1.25rem;
     padding: 0 15px;
     margin: 25px;
 
     border: 3px solid;
-    border-radius: var(--border-radius);
+    border-radius: 15px;
     border-color: var(--base-color);
     background-color: var(--base-color);
     color: #fff;
@@ -166,12 +162,15 @@ video
 .center
 {
     text-align: center;
+    display: grid;
+    justify-content: center;
 }
 
 .bigbutton
 {
     text-decoration: none;
     font-size: 2.5rem;
+    margin: 20px;
 
     border: 20px solid var(--base-color);
     border-radius: 40px;
@@ -193,7 +192,6 @@ video
     z-index: 1;
   }
 
-  
   .container2 .card2{
     position: relative;
     width: 280px;
@@ -210,7 +208,7 @@ video
     border-left: 1px solid rgba(255,255,255,0.5);
     backdrop-filter: blur(5px);
   }
-  
+
   .container2 .card2 .content2{
     padding: 20px;
     text-align: center;
